AtlasOfLivingAustralia/biocollect#1252 - added option to set position of loading control - loading GIF now visible when overlay is added to map - added player control - fixed bugs with LegendImage control

--- a/grails-app/assets/stylesheets/plugins/ala-map/map.css
+++ b/grails-app/assets/stylesheets/plugins/ala-map/map.css
@@ -171,7 +171,7 @@
 
 .legend-container {
     max-width: 250px;
-    max-height: 400px;
+    max-height: 200px;
     min-width: 125px;
     min-height: 20px;
     overflow: auto;
